--- a/bip/mnemonic.html
+++ b/bip/mnemonic.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>BIP-39 助记词与 Seed 生成（校验 english.txt SHA-256）</title>
+<title>BIP-39 助记词与 Seed 生成（english.txt 单次校验）</title>
 <style>
-  :root{--bg:#0b1220;--card:#0f172a;--text:#e5e7eb;--muted:#9ca3af;--line:#1f2937;--accent:#60a5fa}
+  :root{--bg:#0b1220;--card:#0f172a;--text:#e5e7eb;--muted:#9ca3af;--line:#1f2937}
   html,body{background:var(--bg);color:var(--text);margin:0;font:16px/1.55 system-ui,-apple-system,Segoe UI,Roboto,PingFang SC,Microsoft YaHei,sans-serif}
   .wrap{max-width:900px;margin:28px auto;padding:18px}
   h1{margin:0 0 12px}
@@ -24,18 +24,16 @@
     padding:10px 14px;border-radius:12px;cursor:pointer
   }
   button:hover{filter:brightness(1.06)}
-  .muted{color:var(--muted)}
-  .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,"Liberation Mono",Consolas,monospace}
+  .muted{color:var(--muted)} .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace}
   .kv{display:grid;grid-template-columns:140px 1fr;gap:10px;align-items:center}
   .hint{font-size:13px;color:var(--muted)}
   .copy{margin-left:8px}
-  .err{color:#ef4444}
-  .ok{color:#10b981}
+  .err{color:#ef4444} .ok{color:#10b981}
 </style>
 </head>
 <body>
 <div class="wrap">
-  <h1>BIP-39 助记词与 Seed 生成（带 english.txt 校验）</h1>
+  <h1>BIP-39 助记词与 Seed 生成（english.txt 单次校验）</h1>
 
   <div class="card">
     <div class="row kv">
@@ -52,7 +50,7 @@
       <input id="pp" type="text" placeholder="可选：更安全，但需牢记" />
 
       <span></span>
-      <div class="hint">seed = PBKDF2-HMAC-SHA512( 口令=助记词 ，salt='mnemonic'+passphrase ，迭代=2048 )</div>
+      <div class="hint">seed = PBKDF2-HMAC-SHA512( 口令=助记词，salt='mnemonic'+passphrase，迭代=2048 )</div>
     </div>
 
     <div class="row">
@@ -79,153 +77,115 @@
     <textarea id="seedhex" class="mono" readonly></textarea>
   </div>
 
-  <div class="hint">请把 <span class="mono">english.txt</span>（2048 行官方词表）放在本页面同目录下。</div>
+  <div class="hint">请把 <span class="mono">english.txt</span>（官方 2048 词表）放在本页面同目录下。</div>
 </div>
 
 <script type="module">
 /* ========== 工具 ========== */
-const te = new TextEncoder();
-const td = new TextDecoder();
+const te = new TextEncoder(), td = new TextDecoder();
+const EXPECTED_WL_SHA256 = '2f5eed53a4727b4bf8880d8f3f199efc90e58503646d9ff8eff3a2ed3b24dbda';
+
+let WORDLIST = null;   // 缓存加载后的词表（只校验一次）
+let WL_READY = false;  // 是否已通过校验
 
 function hex(u8){ return Array.from(u8).map(b=>b.toString(16).padStart(2,'0')).join(''); }
 async function sha256(buf){ return new Uint8Array(await crypto.subtle.digest('SHA-256', buf)); }
+async function sha256HexOfString(s){ return hex(await sha256(te.encode(s))); }
 function bytesToBin(u8){ return Array.from(u8).map(b=>b.toString(2).padStart(8,'0')).join(''); }
+function normalizeWordlistText(raw){ let t=raw.replace(/\r\n/g,'\n'); t=t.replace(/\n+$/,''); return t+'\n'; }
 
-/** 计算字符串的 SHA-256（UTF-8 编码） */
-async function sha256HexOfString(s){
-  const u = te.encode(s);
-  const h = await sha256(u);
-  return hex(h);
-}
+/* 单次加载 + 校验（后续生成直接复用） */
+async function ensureWordlist() {
+  if (WL_READY && Array.isArray(WORDLIST)) return WORDLIST;
 
-/** 规范化词表文本：统一换行为 \n，去除末尾多余空行，并保证以单个 \n 结尾 */
-function normalizeWordlistText(raw){
-  let t = raw.replace(/\r\n/g, '\n');
-  // 去掉文末多余空行
-  t = t.replace(/\n+$/,'');
-  // 确保只有一个结尾换行
-  return t + '\n';
-}
-
-const EXPECTED_WL_SHA256 = '2f5eed53a4727b4bf8880d8f3f199efc90e58503646d9ff8eff3a2ed3b24dbda';
-
-/* ========== 加载并校验词表 ========== */
-async function loadWordlistChecked() {
   const tip = document.getElementById('wl-tip');
   tip.textContent = '加载 english.txt 中…';
-  const resp = await fetch('./english.txt', { cache: 'no-cache' });
-  if (!resp.ok) throw new Error('无法加载 english.txt（确保与页面同目录）');
-  const raw = await resp.text();
 
-  // 尝试两种哈希：原始文本 & 规范化文本
+  const resp = await fetch('./english.txt', { cache: 'no-cache' });
+  if (!resp.ok) { tip.innerHTML = '<span class="err">无法加载 english.txt</span>'; throw new Error('fetch english.txt failed'); }
+
+  const raw = await resp.text();
   const [rawHash, normHash] = await Promise.all([
     sha256HexOfString(raw),
     sha256HexOfString(normalizeWordlistText(raw)),
   ]);
 
   if (rawHash !== EXPECTED_WL_SHA256 && normHash !== EXPECTED_WL_SHA256) {
-    tip.innerHTML = `<span class="err">english.txt 校验失败！</span><br/>
-      期望：<code>${EXPECTED_WL_SHA256}</code><br/>
-      实际(raw)：<code>${rawHash}</code><br/>
-      实际(norm)：<code>${normHash}</code>`;
-    throw new Error('english.txt SHA-256 不匹配，已拒绝生成助记词。');
+    tip.innerHTML = `<span class="err">english.txt 校验失败！</span><br/>期望：<code>${EXPECTED_WL_SHA256}</code><br/>实际(raw)：<code>${rawHash}</code><br/>实际(norm)：<code>${normHash}</code>`;
+    throw new Error('english.txt sha256 mismatch');
   }
 
   const textOK = (normHash === EXPECTED_WL_SHA256) ? normalizeWordlistText(raw) : raw;
-  const list = textOK.trim().split(/\n/);
-  if (list.length !== 2048) {
-    tip.innerHTML = `<span class="err">english.txt 行数不是 2048（当前 ${list.length}）。</span>`;
-    throw new Error('english.txt 行数不正确');
-  }
-
-  tip.innerHTML = `<span class="ok">english.txt 校验通过</span>`;
-  return list;
+  WORDLIST = textOK.trim().split(/\n/);  // 不再做“2048 行”限制
+  WL_READY = true;
+  tip.innerHTML = `<span class="ok">english.txt 校验通过（仅首次校验）</span>`;
+  return WORDLIST;
 }
 
-/* ========== 生成助记词（BIP-39） ========== */
-async function generateMnemonic(strengthBits = 128) {
-  if (![128,160,192,224,256].includes(strengthBits)) {
-    throw new Error('strengthBits 仅支持 128/160/192/224/256');
-  }
-  const wordlist = await loadWordlistChecked();
+/* 生成助记词 */
+async function generateMnemonic(entBits = 128) {
+  if (![128,160,192,224,256].includes(entBits)) throw new Error('strength 仅支持 128/160/192/224/256');
+  const wordlist = await ensureWordlist();
 
-  // 1) 随机熵
-  const entropy = new Uint8Array(strengthBits / 8);
+  const entropy = new Uint8Array(entBits/8);
   crypto.getRandomValues(entropy);
 
-  // 2) 校验位（SHA-256 前 checksumLength 位）
-  const hash = await sha256(entropy);
-  const checksumLength = strengthBits / 32;
-  const checksumBits = bytesToBin(hash).slice(0, checksumLength);
+  const hash = new Uint8Array(await crypto.subtle.digest('SHA-256', entropy));
+  const csLen = entBits / 32;
+  const bits = bytesToBin(entropy) + bytesToBin(hash).slice(0, csLen);
 
-  // 3) 拼接熵与校验位 → 每 11 位切片 → 词表索引
-  const bits = bytesToBin(entropy) + checksumBits;
   const chunks = bits.match(/.{1,11}/g) ?? [];
-  const words = chunks.map(bin => wordlist[parseInt(bin, 2)]);
+  const words = chunks.map(b => wordlist[parseInt(b,2)]);
 
-  // 尽量擦局部（非强约束）
   entropy.fill(0);
   return words.join(' ');
 }
 
-/* ========== 助记词 → BIP-39 Seed（PBKDF2-HMAC-SHA512, 2048 次, 64 字节） ========== */
-async function mnemonicToSeed(mnemonic, passphrase = '') {
+/* 助记词 -> Seed */
+async function mnemonicToSeed(mnemonic, passphrase=''){
   const mn = mnemonic.normalize('NFKD');
-  const salt = ('mnemonic' + passphrase).normalize('NFKD');
+  const salt = ('mnemonic'+passphrase).normalize('NFKD');
 
-  const baseKey = await crypto.subtle.importKey(
-    'raw',
-    te.encode(mn),
-    { name: 'PBKDF2' },
-    false,
-    ['deriveBits']
-  );
-
+  const baseKey = await crypto.subtle.importKey('raw', te.encode(mn), { name:'PBKDF2' }, false, ['deriveBits']);
   const bits = await crypto.subtle.deriveBits(
-    {
-      name: 'PBKDF2',
-      hash: 'SHA-512',
-      salt: te.encode(salt),
-      iterations: 2048
-    },
-    baseKey,
-    512
+    { name:'PBKDF2', hash:'SHA-512', salt: te.encode(salt), iterations: 2048 },
+    baseKey, 512
   );
-
-  const seedU8 = new Uint8Array(bits);
-  return { seed: seedU8, seedHex: hex(seedU8) };
+  const u8 = new Uint8Array(bits);
+  return { seed: u8, seedHex: hex(u8) };
 }
 
-/* ========== 简单 UI 逻辑 ========== */
+/* UI 绑定 */
 const $ = id => document.getElementById(id);
-$('btn-gen').onclick = async () => {
-  const tip = $('tip');
-  tip.textContent = '生成中…';
-  $('mnemo').value = '';
-  $('seedhex').value = '';
 
-  try {
-    const strength = parseInt($('sel-strength').value, 10);
+$('btn-gen').onclick = async ()=>{
+  const tip=$('tip');
+  tip.textContent='生成中…';
+  $('mnemo').value=''; $('seedhex').value='';
+
+  try{
+    const ent = parseInt($('sel-strength').value,10);
     const pass = $('pp').value || '';
-
-    const mn = await generateMnemonic(strength);
+    const mn = await generateMnemonic(ent);
     const { seedHex } = await mnemonicToSeed(mn, pass);
 
     $('mnemo').value = mn;
     $('seedhex').value = seedHex;
-    tip.textContent = `已生成：${(strength/32)+((strength%32)?1:0)} 词（${strength}-bit 熵）`;
-  } catch (e) {
-    tip.innerHTML = `<span class="err">失败：${e?.message || e}</span>`;
+
+    // 正确的词数： (ENT + ENT/32) / 11
+    const wordsCount = (ent + ent/32) / 11;
+    tip.textContent = `已生成：${wordsCount} 词（${ent}-bit 熵）`;
+  }catch(e){
+    tip.innerHTML = `<span class="err">失败：${e?.message||e}</span>`;
     console.error(e);
   }
 };
 
-$('copy-mn').onclick = async ()=>{
-  try { await navigator.clipboard.writeText($('mnemo').value); } catch {}
-};
-$('copy-seed').onclick = async ()=>{
-  try { await navigator.clipboard.writeText($('seedhex').value); } catch {}
-};
+$('copy-mn').onclick = async ()=>{ try{ await navigator.clipboard.writeText($('mnemo').value); }catch{} };
+$('copy-seed').onclick = async ()=>{ try{ await navigator.clipboard.writeText($('seedhex').value); }catch{} };
+
+/* 页面加载时就预先校验并缓存词表（失败会在 UI 显示原因） */
+ensureWordlist().catch(console.error);
 </script>
 </body>
 </html>
