--- a/bip/mnemonic.html
+++ b/bip/mnemonic.html
@@ -105,8 +105,8 @@
 <script type="module">
 /* ===== 依赖（ESM CDN） ===== */
 import * as secp from 'https://cdn.jsdelivr.net/npm/@noble/secp256k1@2.1.0/+esm';
-import { sha256 }   from 'https://cdn.jsdelivr.net/npm/@noble/hashes@1.4.0/sha256.js';
-import { ripemd160 }from 'https://cdn.jsdelivr.net/npm/@noble/hashes@1.4.0/ripemd160.js';
+import * as nobleHashes from 'https://cdn.jsdelivr.net/npm/@noble/hashes@1.4.0/+esm';
+const { sha256, ripemd160 } = nobleHashes;
 
 /* ===== 内置 bytes<->hex 工具，避免 utils 导出差异 ===== */
 function bytesToHex(u8){ let s=''; for (let i=0;i<u8.length;i++) s+=u8[i].toString(16).padStart(2,'0'); return s; }
