--- a/bip/mnemonic.html
+++ b/bip/mnemonic.html
@@ -104,9 +104,11 @@
 
 <script type="module">
 /* ===== 依赖（ESM CDN） ===== */
-import * as secp from 'https://cdn.jsdelivr.net/npm/@noble/secp256k1@2.1.0/+esm';
-import * as nobleHashes from 'https://cdn.jsdelivr.net/npm/@noble/hashes@1.4.0/+esm';
-const { sha256, ripemd160 } = nobleHashes;
+import { sha256 }     from 'https://cdn.jsdelivr.net/npm/@noble/hashes@1.4.0/sha256.js?module';
+import { ripemd160 }  from 'https://cdn.jsdelivr.net/npm/@noble/hashes@1.4.0/ripemd160.js?module';
+import { keccak_256 } from 'https://cdn.jsdelivr.net/npm/@noble/hashes@1.4.0/sha3.js?module';
+import { bytesToHex, hexToBytes }
+  from 'https://cdn.jsdelivr.net/npm/@noble/hashes@1.4.0/utils.js?module';
 
 /* ===== 内置 bytes<->hex 工具，避免 utils 导出差异 ===== */
 function bytesToHex(u8){ let s=''; for (let i=0;i<u8.length;i++) s+=u8[i].toString(16).padStart(2,'0'); return s; }
