--- a/bip/mnemonic.html
+++ b/bip/mnemonic.html
@@ -107,7 +107,7 @@
 
 import { sha256 }      from 'https://cdn.jsdelivr.net/npm/@noble/hashes@1.4.0/sha256.js';
 import { ripemd160 }   from 'https://cdn.jsdelivr.net/npm/@noble/hashes@1.4.0/ripemd160.js';
-import { keccak_256 }  from 'https://cdn.jsdelivr.net/npm/@noble/hashes@1.4.0/sha3-addons.js';
+import { keccak256 } from 'https://esm.sh/ethereum-cryptography@2.1.2/keccak';
   
 /* ===== 内置 bytes<->hex 工具，避免 utils 导出差异 ===== */
 function bytesToHex(u8){ let s=''; for (let i=0;i<u8.length;i++) s+=u8[i].toString(16).padStart(2,'0'); return s; }
