--- a/bip/mnemonic.html
+++ b/bip/mnemonic.html
@@ -104,7 +104,7 @@
 
 <script type="module">
 /* ===== 依赖（ESM CDN） ===== */
-
+import * as secp from 'https://esm.sh/@noble/secp256k1@1.7.1';
 import { ripemd160 } from 'https://esm.sh/@noble/hashes@1.4.0/ripemd160';
   
 /* ===== 内置 bytes<->hex 工具，避免 utils 导出差异 ===== */
